k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gadget-management
  labels:
    name: gadget-management
